--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,14 @@ jobs:
       - name: Install Dependencies
         id: InstallDeps
         run: |
-          go get github.com/go-check/check
           go get github.com/go-sql-driver/mysql
           go get github.com/gorilla/mux
           go get github.com/satori/go.uuid
           go get golang.org/x/crypto/bcrypt
       - if: ${{success()}}
-        name: Test Go Check
+        name: Test Script
         run: |
-          go test ./     
+          go test . -v
       - if: ${{failure()}}
         name: Create Issues
         uses: nashmaniac/create-issue-action@v1.1
